--- a/css.css
+++ b/css.css
@@ -7,14 +7,19 @@ body {
     position: relative;
     background-color: rgb(248, 240, 240);
     overflow: hidden;
-
-
+}
+.container {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
 }
 .nav-container {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background: rgba(231, 231, 229, 0.486) ;
+    background: rgba(231, 231, 229, 0.25) ;
     height: 50px;
 }
 .V {
@@ -41,7 +46,7 @@ body {
     justify-content: space-evenly;
     align-items: flex-start;
     z-index:1;
-    box-shadow: 5px 10px rgb(0, 0, 0 , 0.8 );
+    box-shadow: 5px 10px rgb(0, 0, 0 , 0.25 );
     font-weight: bolder;
 }
 .categories {
@@ -54,21 +59,51 @@ body {
 }
 .front-img {
     position: relative;
+    flex-wrap: wrap ;
+    display: flex;
     width: auto;
-    height: 92vh;
+    height: auto;
+    max-height: 92vh;
+    justify-content: center;
 }
 .logo {
     font-size: 20px;
     font-weight: lighter;
 }
-.some-text {
-    top: 30%;
-    position: absolute;
-    color:black;
+.position {
+        top: 10%;
+        position: absolute;
+        color:#555;
+        width: auto;
+        padding:8px;
+        margin: 10%;
+}
+.image-product {
+    position: relative;
+}
+.image-product img{
+    width: 300px;
+    height:300px;
+    background:#555;
+    cursor: pointer;
+}
+.title-text {
+    font-size: 25px;
+    font-weight: 700;
+    position: relative;
+    color:#333;
     width: auto;
     padding:8px;
-    background-color: rgba(199, 199, 199, 0.185);
-    margin: 10%;
+    background-color: rgba(199, 199, 199, 0.25);
+    margin: 20px;
+}
+.some-text {
+    position: relative;
+    color:rgba(0, 0, 0, 0.637);
+    width: auto;
+    padding:8px;
+    background-color: rgba(199, 199, 199, 0.25);
+    margin: 20px;
 }
 .footer-container {
     position: relative;
@@ -76,7 +111,7 @@ body {
     justify-content: center;
     width: 100%;
     align-items: center;
-    background-color: rgba(0, 0, 0, 0.24);
+    background-color: rgba(0, 0, 0, 0.25);
     height: 100px;
 }
 footer {
