--- a/css.css
+++ b/css.css
@@ -31,6 +31,9 @@ body {
     justify-content: center;
     opacity: 0;
 }
+.nav-container a:hover{
+    color:rgb(255, 0, 179);
+}
 .nav-container a {
     text-decoration: none;
     color: black;
